--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "i4": "npm run be:composer:install && npm run be:migrate && npm run be:key:generate && npm run permissions:fix",
     "i5": "cd backend && npm install && cd ..",
     "--Backend--": "----------------------BACK END COMMANDS------------------------------------------------------------",
-    "be:dev": "docker-compose up -d && npm run --prefix backend",
+    "be:dev": "docker-compose up -d && npm run dev --prefix backend",
     "fe:build": "npm run build --prefix backend",
     "be:up": "docker-compose up -d",
     "be:up:lite": "docker-compose up app -d",
@@ -20,8 +20,8 @@
     "be:composer:install": "docker exec -it --user www:www-data trenchdevs-backend composer install",
     "be:migrate": "docker exec -it --user www:www-data trenchdevs-backend php artisan migrate",
     "be:key:generate": "docker exec -it --user www:www-data trenchdevs-backend php artisan key:generate",
-    "be:ssh": "docker exec -it --user www:www-data trenchdevs-backend bash",
-    "be:ssh:root": "docker exec -it trenchdevs-backend bash",
+    "be:shell": "docker exec -it --user www:www-data trenchdevs-backend bash",
+    "be:shell:root": "docker exec -it trenchdevs-backend bash",
     "permissions:fix": "docker exec -i trenchdevs-backend bash -c 'chown -R www:www-data /var/www/storage /var/www/resources && chmod ug+w -R /var/www/storage /var/www/resources'"
   },
   "repository": {
