--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_URL=http://localhost:8000
 BASE_URL=trenchdevs.localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 # DB: via the default docker config
 # Use the root .env credentials for these
