--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "--init--": "------------------------------------------------------------------------------------------------------",
     "be:init": "npm run i1 && npm run i2 && npm run i3 && npm run i4 && npm run i5",
     "i1": "cp -n .env.docker.example .env && cp -n backend/.env.example backend/.env",
-    "i2": "mkdir -p docker/volumes/postgres",
+    "i2": "mkdir -p docker/volumes/mysql",
     "i3": "docker-compose build && docker-compose up -d",
     "i4": "npm run be:composer:install && npm run be:migrate && npm run be:key:generate && npm run permissions:fix",
     "i5": "cd backend && npm install && cd ..",
