--- a/backend/composer.json
+++ b/backend/composer.json
@@ -24,6 +24,7 @@
         "laravel/tinker": "^2.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "livewire/livewire": "^2.5",
+        "spatie/laravel-csp": "^2.8",
         "spatie/laravel-markdown": "^2.2",
         "tightenco/ziggy": "^1.0",
         "trenchdevs/csv": "dev-master",
